@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+06-May-2001
+~~~~~~~~~~~
+Added 'Huge, With...' display styles. In huge mode, normal icons are scaled
+up if they're too small.
+
 03-May-2001
 ~~~~~~~~~~~
 Gtk styles can be overridden in <Choices>/ROX-Filer/Styles (suggested by
